# Face_detection_recongnition_and_comparision

./: README.md  pyproject.toml
src/facedetection_opencv/: face_detection_from_camera.py  template_face_recoginition.py
